# geonode-mapstore-client-anvcc

./: install_requires.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
geonode_mapstore_client/: apps.py  context_processors.py  hooksets.py
geonode_mapstore_client/client/: package.json
geonode_mapstore_client/client/js/api/geonode/v2/: index.js
geonode_mapstore_client/client/js/components/Menu/__test__/: MenuItem-test.js
geonode_mapstore_client/client/js/plugins/: ResourcesGrid.jsx
geonode_mapstore_client/client/js/utils/: AppUtils.js  ResourceUtils.js
geonode_mapstore_client/static/fonts/: montserrat.css
geonode_mapstore_client/static/mapstore/configs/: localConfig.json  map.json
geonode_mapstore_client/static/mapstore/gn-translations/: data.de-DE.json  data.en-US.json  data.es-ES.json  data.fi-FI.json  data.fr-FR.json  data.hr-HR.json  data.it-IT.json  data.nl-NL.json  data.pt-PT.json  data.sk-SK.json  data.sv-SE.json  data.vi-VN.json  data.zh-ZH.json
geonode_mapstore_client/templates/: base.html  index.html  page.html
geonode_mapstore_client/templates/documents/: document_embed.html
geonode_mapstore_client/templates/geonode-mapstore-client/: _geonode_config.html  catalogue.html  dashboard_embed.html  dataset_embed.html  geostory_embed.html  map_embed.html
geonode_mapstore_client/templates/geonode-mapstore-client/snippets/: brand_navbar.html  footer.html  language_selector.html  search_bar.html
geonode_mapstore_client/templatetags/: catalogue_urls.py  get_menu_json.py
