# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-geonode-mapstore-client"
version = "4.2.0.dev0"
description = "GeoNode MapStore Client Updated for Django 4.2.7 and Django Rest Framework 3.14.0"
readme = "README.md"
authors = [{ name = "Alessio Fabiani", email = "alessio.fabiani@geo-solutions.it"}, { name = "César Benjamín", email = "mathereall@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3.10",
]
keywords = ["django", "mapstore", "mapstore2"]
dependencies = [
    "django >= 3.2.0, < 5.0",
    "idna",
    "requests >= 2.13.0",
    "Markdown >= 2.6.11",
    "MarkupSafe >= 1.1.1",
    "djangorestframework <= 3.14.0, >= 3.8.0",
    "urllib3 >= 1.25",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/anvcc-inecc/geonode-mapstore-client-anvcc"

[tool.bumpver]
current_version = "4.2.0.dev0"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"setup.py" = ["{version}"]
"setup.cfg" = ['version = {version}']
"VERSION" = ["{version}"]


